Bug 337241 - Konsole hides tabs when moving them using keyboard
Summary: Konsole hides tabs when moving them using keyboard
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: tabbar (other bugs)
Version First Reported In: 2.99.900
Platform: unspecified Linux
: NOR major
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 339551 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-07-08 16:23 UTC by Luiz Angelo De Luca
Modified: 2014-10-28 11:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luiz Angelo De Luca 2014-07-08 16:23:13 UTC
Hello,

I use keyboard do move tabs in konsole. In my case, ctrl+shift+left/rigth. When I'm moving tabs to the left, it removes the tabs before it. After that, If I add a new tab at first position and move it to the  end, the removed tabs appears but with no text on it.

I still can access tabs using shift+left/rigth or using the empty tabs added with ctrl+shift+right I commented before.

Reproducible: Always

Steps to Reproduce:
1.open konsole
2.add 3 tabs (ctrl+shift+t)
3.move the last tab to the first position (ctrl+shift+left twice)
Actual Results:  
4. on every ctrl+shift+left, tab 1 and tab 2 are removed

Expected Results:  
4. keep the tabs ;-)
Comment 1 Arjun AK 2014-10-01 12:06:33 UTC
*** Bug 339551 has been marked as a duplicate of this bug. ***
Comment 2 Arjun AK 2014-10-21 17:48:03 UTC
https://git.reviewboard.kde.org/r/120693/
Comment 3 Kurt Hindenburg 2014-10-28 11:21:17 UTC
Git commit b51dca8218e315787b0e7f156f91066204755756 by Kurt Hindenburg.
Committed on 28/10/2014 at 11:18.
Pushed by hindenburg into branch 'master'.

Fix Konsole hides tabs when moving them using keyboard

Only on KF5, not KDE 4.14.x

Thanks to Arjun AK arjunak23 @gmail com for researching/fixing this
REVIEW: 120693

M  +4    -4    src/ViewContainer.cpp

http://commits.kde.org/konsole/b51dca8218e315787b0e7f156f91066204755756