Fix Konsole hides tabs when moving them using keyboard

Only on KF5, not KDE 4.14.x

Thanks to Arjun AK arjunak23 @gmail com for researching/fixing this

BUG: 337241
REVIEW: 120693